objects/TriggerSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CloneLeadRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CloneLeadRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateTaskOnAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateTaskOnAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkContactToAccountByEmailDomain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LinkContactToAccountByEmailDomain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MatchEmailWithAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MatchEmailWithAccount</label>
        <type>Checkbox</type>
    </fields>
    <label>TriggerSetting</label>
</CustomObject>